<resources>
    <string name="app_name">HewanPedia</string>
    // Layout
    <string name="pilih_gambar">(Pilih gambar untuk membuka galeri)</string>
    <string name="daftar_ras_judul">Daftar Ras Hewan</string>
    <string name="go_back">Kembali</string>
    <string name="kucing">Kucing</string>
    <string name="anjing">Anjing</string>
    <string name="burung">Burng</string>
    <string name="kucing_list_title">Daftar Ras Kucing</string>
    <string name="anjing_list_title">Daftar Ras Anjing</string>
    <string name="burung_list_title">Daftar Ras Burung</string>
    // Data kucing
    <string name="angora_nama">Angora</string>
    <string name="angora_asal">Turki</string>
    <string name="angora_deskripsi">Aslinya berasal dari Ankara, Turki dengan ciri khas berbulu panjang dan lembut</string>
    <string name="bengal_nama">Bengal</string>
    <string name="bengal_asal">Inggris</string>
    <string name="bengal_deskripsi">Merupakan hasil persilangan antara Kucing Leopard Asia dengan kucing domestik Inggris</string>
    <string name="birmani_nama">Birmani</string>
    <string name="birmani_asal">Birma/Myanmar</string>
    <string name="birmani_deskripsi">Konon awalnya merupakan ras kucing yand biasa menemani para biksu yang menetap pada kuil di Birma</string>
    <string name="persia_nama">Persia</string>
    <string name="persia_asal">Iran</string>
    <string name="persia_deskripsi">Kucing berbulu panjang dengan wajah bundar dan hidung pesek. Awalnya berasal dari Iran kemudian diimpor ke Italia</string>
    <string name="siam_nama">Siam</string>
    <string name="siam_asal">Thailand</string>
    <string name="siam_deskripsi">Kucing hasil turunan dari Wichian Maat (Kucing Thailand) dengan ciri khas berbadan panjang dan langsing, wajah lonjong, telinga lebar, dan mata kebiruan</string>
    <string name="siberia_nama">Siberia</string>
    <string name="siberia_asal">Rusia</string>
    <string name="siberia_deskripsi">Kucing domestik Rusia dengan bulu lebat dan badan besar tapi sangat lincah dan terkenal dengan kemampuan melompatnya</string>
    // Data anjing
    <string name="bulldog_nama">Bulldog</string>
    <string name="bulldog_asal">Inggris</string>
    <string name="bulldog_deskripsi">Anjing populer yang dikenal dengan badan yang gemuk berotot, wajah seperti kain kusut, dan hidung yang pesek</string>
    <string name="husky_nama">Husky</string>
    <string name="husky_asal">Alaska,Siberia,Finlandia (daerah bersalju)</string>
    <string name="husky_deskripsi">Anjing jenis khusus yang awalnya digunakan untuk menarik kereta salju</string>
    <string name="kintamani_nama">Kintamani</string>
    <string name="kintamani_asal">Indonesia</string>
    <string name="kintamani_deskripsi">Ras anjing asli pulau Bali </string>
    <string name="samoyed_nama">Samoyed</string>
    <string name="samoyed_asal">Rusia</string>
    <string name="samoyed_deskripsi">Anjing yang berasal dari Siberia yang awalnya biasa digunakan untuk menjaga ternak oleh suku Samoyed</string>
    <string name="shepherd_nama">Shepherd</string>
    <string name="shepherd_asal">Jerman</string>
    <string name="shepherd_deskripsi">Anjing pintar dan kuat, sekarang banyak digunakan sebagai anjing penjaga, pengawal, dan anjing polisi (K9)</string>
    <string name="shiba_nama">Shiba</string>
    <string name="shiba_asal">Jepang</string>
    <string name="shiba_deskripsi">Anjing dari daerah Shiba ini gesit dan lincah sehingga awalnya banyak digunakan untuk berburu</string>
    // Data Burung
    <string name="cendrawasih_nama" >Cendrawasih</string>
    <string name="crndrawasih_asal" >Indonesia Bagian Timur</string>
    <string name="cendrawasih_deskripsi" >Burung cendrawasih (Paradisaeidae) dijuluki sebagai  burung surga karena keelokannya yang terkenal di seluruh dunia.</string>
    <string name="flamingo_nama" >Flaminggo</string>
    <string name="flamingo_asal" >Amerika</string>
    <string name="flamingo_deskripsi" >Flamingo adalah spesies burung berkaki panjang yang hidup berkelompok.</string>
    <string name="golden_pheasant_nama" >Golden Pheasant</string>
    <string name="golden_pheasant_asal" >Tiongkok</string>
    <string name="golden_pheasant_deskripsi" >Golden Pheasant adalah burung spesies Neognata faisánido galleriforme yaitu salah satu dari dua spesies dari genus Chrysolophus</string>
    <string name="macau_deskripsi">Burung macaw merupakan spesies burung asli dari benua amerika tepatnya di amerika selatan di hutan amazon terdapat ribuan spesies burung macau</string>
    <string name="macau_nama">Macau</string>
    <string name="macau_asal" >Amerika Selatan</string>
    <string name="merak_nama" >Merak</string>
    <string name="merak_asal" >India</string>
    <string name="merak_deskripsi" >Burung merak adalah satwa asli dari India. Ada beberapa spesies burungmerak seperti merak hijau, merak putih, merak merah dan merak biru</string>
    <string name="tucan_nama" >Tucan</string>
    <string name="tucan_asal" >Brazil</string>
    <string name="tucan_deskripsi" >Tucan adalah burung yang dicirikan oleh paruh bear, warna yang indah dan terang. Paruh ini menonjol di badannya</string>
    //profil
    <string name="prodi">Prodi</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="alamat">Alamat</string>
    <string name="desa_sakra_selatan">Desa Sakra Selatan</string>
    <string name="ttl">TTL</string>
    <string name="penyenggir_7_januari_2002">Penyenggir, 7 Januari 2002</string>
    <string name="no_hp">No.HP</string>

</resources>